# ChangeLog for net-im/linphone
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/linphone/ChangeLog,v 1.8 2003/12/06 23:29:17 lanius Exp $

  07 Dec 2003; Heinrich Wendel <lanius@gentoo.org> linphone-0.10.2.ebuild,
  linphone-0.9.0-r1.ebuild:
  fixed alsa dep

*linphone-0.12.0 (04 Oct 2003)

  04 Oct 2003; Stefan Knoblich <stkn@gentoo.org> linphone-0.12.0.ebuild:
  Version bumped. Changed dependency from alsa-driver to alsa-lib.

  26 Sep 2003; Martin Holzer <mholzer@gentoo.org> linphone-0.10.2.ebuild:
  Added IUSE flags. Closes #29265.

  12 Jun 2003; <msterret@gentoo.org> linphone-0.10.2.ebuild:
  added header from skel.ebuild

*linphone-0.10.2 (04 May 2003)

  04 May 2003; Martin Holzer <mholzer@gentoo.org> linphone-0.10.2.ebuild:
  Version bumped. Ebuild submitted by Jiri VERUNEK <verunek@vol.cz> in #20391.

*linphone-0.9.0-r1 (20 Mar 2003)

  20 Mar 2003; Seemant Kulleen <seemant@gentoo.org> linphone-0.9.0-r1.ebuild:
  removed pic stuff

*linphone-0.9.0 (05 Sep 2002)

  05 Sep 2002; Daniel Robbins <drobbins@gentoo.org> This ebuild was created by
  gaarde (Paul Belt) or someone else using his account. Looks ok, so moving to
  its proper place in net-im (was in net-dialup before.)