@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/linphone/linphone-0.9.0-r1.ebuild,v 1.4 2003/12/06 23:29:17 lanius Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/linphone/linphone-0.9.0-r1.ebuild,v 1.5 2003/12/31 04:21:04 bazik Exp $
 
 IUSE="doc gtk nls xv alsa"
 
@@ -10,12 +10,12 @@ SRC_URI="http://www.linphone.org/download/${P}.tar.gz"
 
 SLOT="1"
 LICENSE="GPL-2"
-KEYWORDS="x86 ~ppc ~sparc ~alpha ~mips ~hppa ~arm"
+KEYWORDS="x86"
 
 DEPEND="dev-libs/glib
 	=net-libs/libosip-0.8.8
 	=gnome-base/gnome-panel-1.4.1
-	xv? ( dev-lang/nasm )
+	x86? ( xv? ( dev-lang/nasm ) )
 	gtk? ( =x11-libs/gtk+-1.2* )
 	alsa? ( >media-libs/alsa-lib-0.5 )"
 
