@@ -1,6 +1,11 @@
 # ChangeLog for net-im/linphone
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/linphone/ChangeLog,v 1.8 2003/12/06 23:29:17 lanius Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/linphone/ChangeLog,v 1.9 2003/12/31 04:21:04 bazik Exp $
+
+  31 Dec 2003; Sven Blumenstein <bazik@gentoo.org> linphone-0.10.2.ebuild,
+  linphone-0.12.0.ebuild, linphone-0.9.0-r1.ebuild:
+  Fixed handling of the (optional) x86-only DEPEND
+  dev-lang/nasm and removed KEYWORD's of untested archs.
 
   07 Dec 2003; Heinrich Wendel <lanius@gentoo.org> linphone-0.10.2.ebuild,
   linphone-0.9.0-r1.ebuild:
